# LinuxDevelopment2021

./: .gitignore
02_TerminalProject/: Makefile  Shower  Shower.c
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test_-100_100_3.gdb  test_1_12.gdb
06_TracingFencing/: Makefile  move.c  unlink_trick.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test-md5.sh  test-sha1.sh
08_Regexps/: CMakeLists.txt  echo_sed.sh  esub.c  subparser.h  test.sh
09_Testing/: buf.h  meson.build
09_Testing/tests/: free_null.c  grow_trunc.c  init_free.c  pop.c  push_index.c  test.h
10_I18n/: Makefile  guess.c  guess.po  guess.pot  meson.build
10_I18n/po/: meson.build  ru.po
11_Documenting/: Doxyfile  Makefile  guess.c  guess.po  guess.pot
12_PatchInstall/: Makefile  guess.c  guess.md  guess.po  guess.pot
